# slide

./: .gitignore  CONTEXT.md  LICENSE  Makefile  README.md  reset.asm  slide.asm  slidediag.asm
.github/workflows/: release.yaml
slide-pc/: make_test_files.sh  pyproject.toml
slide-pc/slide/: recv.py  send.py
slide-py/slide/: common.py  send.py
slide-rs/: Cargo.toml
slide-rs/src/: main.rs  protocol.rs  recv.rs  send.rs
